Changes from Version 0.8-4 to 0.9-1 [July 08 2015]
* now all RDML types are R6 classes

Changes from Version 0.8-3 to 0.8-4 [April 19 2015]
* progress bar disabled at non interactive mode
* conditions and quantities moved to sample attributes

Changes from Version 0.8-2 to 0.8-3 [April 8 2015]
* uuid usage removed

Changes from Version 0.8-1 to 0.8-2 [April 2 2015]
* Added AsDendrogram

Changes from Version 0.7-1 to 0.8-1 [January 27 2015]
* All code rewritten
* Working functions: AsTable, GetFData

Changes from Version 0.6-1 to 0.7-1 [September 23 2014]
* Added plot S3
* RDML rewrote as R6 object

Changes from Version 0.6 to 0.6-1 [September 23 2014] 
* flat.table option removed from RDML function

Changes from Version 0.5 to 0.6 [September 19 2014] 
* Added shiny GUI
* Added summary for melting data

Changes from Version 0.4-2 to 0.5 [September 15 2014] 
* Added function selectFData
* RDML function code optimization
* %TUBE% corrected for Light Cycler 96

Changes from Version 0.4-1 to 0.4-2 [September 10 2014] 
* Added "Not run" to documentation

Changes from Version 0.4 to 0.4-1 [September 09 2014] 
* Improved documentation
* Improved some examples
* Minor code improvements
* Submission to CRAN
* New summary object summary-RDML_object

Initial release version 0.4 [September 5 2014] 
* Initial public release of RDML package by Konstantin A. Blagodatskikh at github
  - Contributions by Stefan Roediger
  - Renamed from import.RDML to RDML
  - Latest source code hosted at https://github.com/kablag/RDML now
* New examples
* Code cleanup
* Initial version of logo
* Suggests qpcR and chipPCR package
* Improved documentation