@@ -1,9 +1,9 @@
 Package: RDML
 Type: Package
 Title: Importing Real-Time Thermo Cycler (qPCR) Data from RDML Format Files
-Version: 0.9-1
+Version: 0.9-2
 LazyData: true
-Date: 2015-07-21
+Date: 2015-09-04
 Description: Imports real-time thermo cycler (qPCR) data from Real-time PCR
     Data Markup Language (RDML) format files and transforms to the appropriate
     formats of the 'qpcR' and 'chipPCR' packages. Contains a dendrogram
